--- a/public/scr/sass/components/_projects.scss
+++ b/public/scr/sass/components/_projects.scss
@@ -77,6 +77,14 @@
           .project_template {
             display: inline;
           }
+          .project_header_h1{
+          padding: 2rem;
+          font-size: 3rem;
+        }
+        .project_header_carousel{
+          padding: 1rem;
+          font-size: 1.9rem;
+        }
     }
       @media only screen and (min-width: 1050px) {
       
